[gd_scene load_steps=23 format=3 uid="uid://cem7r4j8s7g4n"]

[ext_resource type="PackedScene" uid="uid://vl613h1q7jq" path="res://entities/entity.tscn" id="1_fdhh2"]
[ext_resource type="Script" path="res://entities/player/player.gd" id="2_xgaa1"]
[ext_resource type="Texture2D" uid="uid://b7o5qtn82u1ur" path="res://Aseprite Assets/player/maincharacterMV1-Sheet.png" id="3_k1sps"]
[ext_resource type="Script" path="res://entities/player/states/move_state.gd" id="8_0q58c"]
[ext_resource type="Script" path="res://entities/player/state_debug_label.gd" id="8_11kuo"]
[ext_resource type="LabelSettings" uid="uid://clo0nfvok1ly7" path="res://fonts/default_label_settings.tres" id="8_j0dv7"]
[ext_resource type="Script" path="res://entities/player/player_input.gd" id="9_bp2km"]
[ext_resource type="Script" path="res://entities/player/states/limbo_hsm.gd" id="12_iipp6"]
[ext_resource type="Script" path="res://entities/player/states/idle_state.gd" id="12_vamft"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_uidrs"]
size = Vector2(14, 41)

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_mck4p"]
radius = 7.0
height = 42.0

[sub_resource type="Animation" id="Animation_arp08"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [1]
}

[sub_resource type="Animation" id="Animation_2gel8"]
resource_name = "attacksword"
length = 0.5
step = 0.05
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.05, 0.1, 0.15, 0.2, 0.25, 0.3, 0.35, 0.4, 0.45),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [19, 20, 21, 22, 23, 24, 25, 26, 27, 28]
}

[sub_resource type="Animation" id="Animation_qjupc"]
resource_name = "crouching"
length = 0.55
loop_mode = 1
step = 0.08
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.08, 0.16, 0.24, 0.32, 0.4, 0.48),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [11, 12, 13, 14, 15, 16, 17]
}

[sub_resource type="Animation" id="Animation_xrhbu"]
resource_name = "crouchpre"
length = 0.15
step = 0.08
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.08),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [9, 10]
}

[sub_resource type="Animation" id="Animation_h6ajb"]
resource_name = "idle"
length = 0.85
loop_mode = 1
step = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7, 0.8),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3, 4, 5, 6, 7, 8]
}

[sub_resource type="Animation" id="Animation_4knjn"]
resource_name = "jump"
length = 0.1
step = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [41]
}

[sub_resource type="Animation" id="Animation_j14ib"]
resource_name = "jumpfall"
length = 0.1
step = 0.05
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.05),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [40, 41]
}

[sub_resource type="Animation" id="Animation_jpdmb"]
resource_name = "run"
length = 0.64
loop_mode = 1
step = 0.08
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.08, 0.16, 0.24, 0.32, 0.4, 0.48, 0.56),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [32, 33, 34, 35, 36, 37, 38, 39]
}

[sub_resource type="Animation" id="Animation_8ji32"]
resource_name = "runpre"
length = 0.15
step = 0.08
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.08),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [30, 31]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_yx67n"]
_data = {
"RESET": SubResource("Animation_arp08"),
"attacksword": SubResource("Animation_2gel8"),
"crouching": SubResource("Animation_qjupc"),
"crouchpre": SubResource("Animation_xrhbu"),
"idle": SubResource("Animation_h6ajb"),
"jump": SubResource("Animation_4knjn"),
"jumpfall": SubResource("Animation_j14ib"),
"run": SubResource("Animation_jpdmb"),
"runpre": SubResource("Animation_8ji32")
}

[sub_resource type="BlackboardPlan" id="BlackboardPlan_7aiex"]
var/direction/name = &"direction"
var/direction/type = 5
var/direction/value = Vector2(0, 0)
var/direction/hint = 0
var/direction/hint_string = "the direction the player is trying to move"

[node name="Player" node_paths=PackedStringArray("sprite_2d", "animation_player") groups=["Player"] instance=ExtResource("1_fdhh2")]
collision_mask = 17
script = ExtResource("2_xgaa1")
sprite_2d = NodePath("Sprite2D")
animation_player = NodePath("AnimationPlayer")
knockback_force = 1000
knockback_duration = 0.3
invulnerability_duration = 1.0
speed = 100
acceleration = 1200
friction = 1800
dash_cooldown = 0.5
gravity = 600
terminal_velocity = 500
attack_cooldown = 0.5

[node name="RoomDetector" type="Area2D" parent="." index="0"]
collision_layer = 0
collision_mask = 128

[node name="CollisionShape2D" type="CollisionShape2D" parent="RoomDetector" index="0"]
position = Vector2(0, 0.5)
shape = SubResource("RectangleShape2D_uidrs")

[node name="CollisionShape2D" parent="." index="1"]
position = Vector2(-1, 0)
shape = SubResource("CapsuleShape2D_mck4p")

[node name="Sprite2D" type="Sprite2D" parent="." index="2"]
texture = ExtResource("3_k1sps")
hframes = 6
vframes = 7
frame = 1

[node name="AnimationPlayer" type="AnimationPlayer" parent="." index="3"]
libraries = {
"": SubResource("AnimationLibrary_yx67n")
}

[node name="JumpBuffer" type="Timer" parent="Timers" index="0"]
wait_time = 0.1
one_shot = true

[node name="DashCooldown" type="Timer" parent="Timers" index="1"]
one_shot = true

[node name="AttackCooldown" type="Timer" parent="Timers" index="2"]
wait_time = 0.5
one_shot = true

[node name="InvulnerabilityTimer" type="Timer" parent="Timers" index="3"]

[node name="Stats" type="Node" parent="." index="5"]

[node name="StateDebugLabel" type="Label" parent="." index="6"]
offset_left = -44.0
offset_top = -48.0
offset_right = 44.0
offset_bottom = -25.0
text = "State: "
label_settings = ExtResource("8_j0dv7")
horizontal_alignment = 1
script = ExtResource("8_11kuo")

[node name="LimboHSM" type="LimboHSM" parent="." index="7" node_paths=PackedStringArray("character")]
blackboard_plan = SubResource("BlackboardPlan_7aiex")
script = ExtResource("12_iipp6")
character = NodePath("..")
states = Array[Dictionary]([{}])

[node name="IdleState" type="LimboState" parent="LimboHSM" index="0"]
script = ExtResource("12_vamft")
animation_name = &"idle"

[node name="MoveState" type="LimboState" parent="LimboHSM" index="1"]
script = ExtResource("8_0q58c")
animation_name = &"run"

[node name="PlayerInput" type="Node" parent="." index="8" node_paths=PackedStringArray("limbo_hsm")]
script = ExtResource("9_bp2km")
limbo_hsm = NodePath("../LimboHSM")

[connection signal="animation_finished" from="AnimationPlayer" to="." method="_on_animation_player_animation_finished"]
[connection signal="timeout" from="Timers/AttackCooldown" to="." method="_on_attack_cooldown_timeout"]
